removed duplicated cx=250 circles

--- a/pa6.html
+++ b/pa6.html
@@ -18,42 +18,38 @@
         <circle id="led-1" cx="50" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
         <circle id="led-2" cx="150" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
         <circle id="led-3" cx="250" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-4" cx="250" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-5" cx="350" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-6" cx="450" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-7" cx="550" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-8" cx="650" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-9" cx="750" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-4" cx="350" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-5" cx="450" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-6" cx="550" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-7" cx="650" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-8" cx="750" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
 
-        <circle id="led-10" cx="50" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-11" cx="150" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-12" cx="250" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-13" cx="250" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-14" cx="350" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-15" cx="450" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-16" cx="550" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-17" cx="650" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-18" cx="750" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-9" cx="50" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-10" cx="150" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-11" cx="250" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-12" cx="350" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-13" cx="450" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-14" cx="550" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-15" cx="650" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-16" cx="750" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
 
-        <circle id="led-19" cx="50" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-20" cx="150" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-21" cx="250" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-22" cx="250" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-23" cx="350" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-24" cx="450" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-25" cx="550" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-26" cx="650" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-27" cx="750" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-17" cx="50" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-18" cx="150" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-19" cx="250" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-20" cx="350" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-21" cx="450" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-22" cx="550" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-23" cx="650" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-24" cx="750" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
 
-        <circle id="led-28" cx="50" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-29" cx="150" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-30" cx="250" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-31" cx="250" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-32" cx="350" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-33" cx="450" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-34" cx="550" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-35" cx="650" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-36" cx="750" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-25" cx="50" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-26" cx="150" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-27" cx="250" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-28" cx="350" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-29" cx="450" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-30" cx="550" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-31" cx="650" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle id="led-32" cx="750" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
     </svg>
     </br>
     <div id="control-buttons">
@@ -81,7 +77,12 @@
     }
 
     function animationMain(){
+      marqueePattern();
       //Main deterministic animation driver
+    }
+
+    function marqueePattern(){
+
     }
   </script>
 </html>
