--- a/pa6.html
+++ b/pa6.html
@@ -15,41 +15,41 @@
   <body>
     <svg width="800" height="400" boarder="1">
       <rect id="stage" x="0" y="0" width="800" height="400" stroke="black" stroke-width="1" fill-opacity="0.0"/>
-        <circle id="led-1" cx="50" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-2" cx="150" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-3" cx="250" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-4" cx="350" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-5" cx="450" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-6" cx="550" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-7" cx="650" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-8" cx="750" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="1" cx="50" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="2" cx="150" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="3" cx="250" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="4" cx="350" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="5" cx="450" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="6" cx="550" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="7" cx="650" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="8" cx="750" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
 
-        <circle id="led-9" cx="50" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-10" cx="150" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-11" cx="250" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-12" cx="350" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-13" cx="450" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-14" cx="550" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-15" cx="650" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-16" cx="750" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="9" cx="50" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="10"  cx="150" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="11"  cx="250" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="12"  cx="350" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="13"  cx="450" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="14"  cx="550" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="15"  cx="650" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="16"  cx="750" cy="150" r="40" stroke="black" stroke-width="1" fill="white"/>
 
-        <circle id="led-17" cx="50" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-18" cx="150" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-19" cx="250" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-20" cx="350" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-21" cx="450" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-22" cx="550" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-23" cx="650" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-24" cx="750" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="17"  cx="50" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="18"  cx="150" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="19"  cx="250" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="20"  cx="350" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="21"  cx="450" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="22"  cx="550" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="23"  cx="650" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="24"  cx="750" cy="250" r="40" stroke="black" stroke-width="1" fill="white"/>
 
-        <circle id="led-25" cx="50" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-26" cx="150" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-27" cx="250" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-28" cx="350" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-29" cx="450" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-30" cx="550" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-31" cx="650" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
-        <circle id="led-32" cx="750" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="25"  cx="50" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="26"  cx="150" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="27"  cx="250" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="28"  cx="350" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="29"  cx="450" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="30"  cx="550" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="31"  cx="650" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
+        <circle class="led" led-num="32"  cx="750" cy="350" r="40" stroke="black" stroke-width="1" fill="white"/>
     </svg>
     </br>
     <div id="control-buttons">
@@ -77,12 +77,32 @@
     }
 
     function animationMain(){
-      marqueePattern();
+      marqueeSequence("Blue", 10);
       //Main deterministic animation driver
     }
 
-    function marqueePattern(){
-
+    function marqueeSequence(color, timeSteps){
+      var LEDs = d3.selectAll(".led");
+      for(var i = 0; i<timeSteps; i++){
+        LEDs.each(function(d, j){
+          var currentCircle = d3.select(this);
+          console.log(this);
+          if(i % 2 == 0){
+            if(j % 2 == 0){
+              currentCircle.attr("fill", color);
+            } else{
+              currentCircle.attr("fill", "white");
+            }
+          } else {
+            if(j % 2 == 1){
+              currentCircle.attr("fill", "white");
+            } else {
+              currentCircle.attr("fill", color);
+            }
+          }
+        }); 
+        
+      }
     }
   </script>
 </html>
