changed squares animation to yellow

--- a/pa6.html
+++ b/pa6.html
@@ -48,7 +48,7 @@
     }
 
     // SquaresAnimation is an animation ____ 
-    var SquaresAnimation = Animation.make({color: "blue", delay: 800, duration: 400});
+    var SquaresAnimation = Animation.make({color: "yellow", delay: 800, duration: 400});
     SquaresAnimation.prototype.play = function() {
       // This sequence is a off-to-on transition
       var INITIAL_SELECT = this.selection;
